--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,7 +31,7 @@
 
     <main class="content">
         <div id="search-engine-optimization" class="main-block">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt=""/>
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image depicting a notebook with handwritten notes on Search Engine Optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -39,7 +39,7 @@
         </div>
 
         <div id="online-reputation-management" class="main-block">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Image of laptop with graphical depictions of Online Reputation management." />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -47,7 +47,7 @@
         </div>
 
         <div id="social-media-marketing" class="main-block">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Image depicting a group discussing Social Media Marketing with representative symbols on the table." />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
